Finished translating java-gc-distilled